/*
 * Copyright 2019 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *       http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.google.cloud.partners.pubsub.kafka.config";

package google.pubsub.kafka.emulator;

// Represents the relationship between a Pub/Sub Topic, a Kafka Topic, and its
// Subscriptions
message Topic {
  string name = 1;
  string kafka_topic = 2;
  repeated Subscription subscriptions = 3;
}

// Pub/Sub Subscription
message Subscription {
  string name = 1;
  int32 ack_deadline_seconds = 2;
}

// A Pub/Sub Project and its associated Topics
message Project {
  string name = 1;
  repeated Topic topics = 2;
}

// Configuration for the Pub/Sub-specific details of the emulator
message PubSub {
  repeated Project projects = 1;
}

// Configuration for the Kafka-specific details of the emulator
message Kafka {
  repeated string bootstrap_servers = 1;
  map<string, string> producer_properties = 2;
  int32 producer_executors = 3;
  map<string, string> consumer_properties = 4;
  int32 consumers_per_subscription = 5;
}

// Server settings
message Server {
  // TLS security settings
  message Security {
    string certificate_chain_file = 1;
    string private_key_file = 2;
  }

  int32 port = 1;
  Security security = 2;
}

// Top-level configuration for the emulator
message Configuration {
  Server server = 1;
  Kafka kafka = 2;
  PubSub pubsub = 3;
}
